feat(api): generate menu codes on create
